lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3
spec:
  ingressClassName: nginx
  rules:
    - host: lab3.krylov.ru
      http:
        paths:
          - backend:
              service:
                name: lab3
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - lab3.krylov.ru
    secretName: tls-cert
